# my_todo

./: Cargo.toml  Makefile.toml  README.md  docker-compose.yml
migrations/: 20240312072949_label.sql
my-todo-front/: package-lock.json  package.json
my-todo-front/src/: App.tsx
my-todo-front/src/components/: SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
my-todo-front/src/lib/: toggleLabels.ts
my-todo-front/src/lib/api/: label.ts  todo.ts
my-todo-front/src/styles/: modal.ts
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: label.rs  todo.rs
