[package]
name = "my_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-macros = "0.4.1"
hyper = { version = "1.1.0", features = ["full"]}
tokio = { version = "1.16.1", features = ["full"]}
tower = "0.4.11"
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"]}
anyhow = "1.0.56"
thiserror = "1.0.30"
http-body = "1.0.0"
validator = { version = "0.16.1", features = ["derive"]}
